fix: :bug: fix sizing of testimonials on small screen

--- a/webshop_frontend/src/App.css
+++ b/webshop_frontend/src/App.css
@@ -64,7 +64,11 @@
 }
 
 .m-t-1 {
-  margin-top: 1em;
+  margin-top: 1em !important;
+}
+
+.grid-auto {
+  grid-template-columns: auto !important;
 }
 
 /* Basic elements */
@@ -918,36 +922,19 @@ form a:hover {
 }
 
 .description-row {
+  margin: 3em;
   display: flex;
   flex-direction: row;
-  gap: 3em;
   justify-content: space-evenly;
   align-items: center;
-  margin: 0 2em;
-  width: auto;
+  gap: 3em;
 }
 
 .description-component {
   flex-basis: 50%;
-  max-width: 45rem;
 }
 
-.full-width-desc {
-  width: auto;
-  max-width: auto;
-  min-width: auto;
-}
-
-.text-description {
-  text-align: center;
-
-}
-
-.image-description {
-  overflow: hidden;
-}
-
-.image-description img {
+.image-description>img {
   border-radius: 0.5rem;
   width: 100%;
   object-fit: cover;
@@ -1023,6 +1010,28 @@ form a:hover {
   position: relative;
   width: var(--slides-width);
   overflow: hidden;
+}
+
+@media (max-width: 900px) {
+  .container {
+    padding: 1em;
+  }
+
+  .gallery {
+    grid-template-columns: 3em auto 3em;
+  }
+
+  .slides-view {
+    --slides-width: calc(100vw - 8em);
+  }
+
+  .full-slides-view {
+    --slides-width: calc(100vw - 2em) !important;
+  }
+
+  .full-slides-view p {
+    margin-inline: 0;
+  }
 }
 
 .slides-container {
